# sandpaper

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vitest.config.ts
apps/desktop/plugin-runtime/: sandbox-runtime.mjs
apps/desktop/src/: app-accessibility.test.tsx  app-autosave.test.tsx  app-code-block.test.tsx  app-contrast.test.ts  app-daily-note.test.tsx  app-diagram.test.tsx  app-discovery.test.tsx  app-editor-ux.test.tsx  app-fluent-icons.test.tsx  app-graph-view.test.tsx  app-heading-typography.test.ts  app-linking.test.tsx  app-markdown.test.tsx  app-modes.test.tsx  app-notifications.test.tsx  app-offline-archive.test.tsx  app-perf-hud.test.tsx  app-permissions.test.tsx  app-plugin-error.test.tsx  app-shadow-writer.test.tsx  app-sidebar.test.tsx  app-sync-conflict.test.tsx  app-sync-log.test.tsx  app-topbar.test.tsx  app-viewer.test.tsx  app.css  app.test.tsx  app.tsx  index.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: db.rs  lib.rs  main.rs  plugins.rs  vaults.rs
apps/desktop/src/app/: app.css  app.tsx
apps/desktop/src/editor/: perf.test.ts  perf.ts  virtual-list.test.ts  virtual-list.ts
apps/desktop/src/pages/: main-page.tsx
apps/desktop/src/shared/model/: id-types.ts  markdown-export-types.ts  markdown-types.ts  mode.ts  position.ts
apps/desktop/src/shared/ui/: button.test.tsx  button.tsx  chip.test.tsx  chip.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  empty-state.test.tsx  empty-state.tsx  icon-button.tsx  icons.tsx
apps/desktop/src/test/: setup.ts
apps/desktop/src/widgets/backlinks/: backlinks-panel.tsx  backlinks-toggle.test.tsx  backlinks-toggle.tsx
apps/desktop/src/widgets/capture/: capture-pane.tsx
apps/desktop/src/widgets/discovery/: unlinked-references-pane.tsx
apps/desktop/src/widgets/editor/: editor-pane.test.tsx  editor-pane.tsx
apps/gpui-desktop/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  icon-manifest.json
apps/gpui-desktop/assets/icons/fluent/: .source.json
apps/gpui-desktop/scripts/: mermaid-render.mjs  sync-fluent-icons.sh  visual-qa-nav.sh  visual-qa.sh
apps/gpui-desktop/src/: main.rs  sandpaper_app.rs
apps/gpui-desktop/src/app/: mod.rs  prelude.rs  store.rs
apps/gpui-desktop/src/app/store/: agent_debug.rs  connections.rs  constants.rs  data.rs  diagram.rs  editor.rs  helpers.rs  lifecycle.rs  markdown.rs  notifications.rs  offline_archive.rs  outline.rs  palette.rs  plugin_blocks.rs  plugins.rs  shadow_writer.rs
apps/gpui-desktop/src/app/store/state/: mod.rs
apps/gpui-desktop/src/sandpaper_app/: data.rs  editor.rs  helpers.rs  lifecycle.rs  palette.rs  render.rs
apps/gpui-desktop/src/services/: mod.rs  plugins.rs
apps/gpui-desktop/src/services/agent_debug/: bridge.rs  mod.rs  screenshot.rs  server.rs
apps/gpui-desktop/src/ui/: mod.rs  root.rs  sandpaper_theme.rs  text_input.rs  tokens.rs
apps/gpui-desktop/src/ui/components/: block_renderers.rs  editor.rs  empty_state.rs  error_display.rs  helpers.rs  layout.rs  mod.rs  modals.rs  plugins.rs  sidebar.rs  skeleton.rs  spinner.rs
apps/gpui-desktop/src/ui/dialogs/: mod.rs
apps/gpui-desktop/src/ui/icons/: assets.rs  mod.rs
apps/gpui-desktop/tests/: core_workflows.rs
apps/gpui-desktop/themes/: sandpaper.json
apps/sync-server/: eslint.config.js  package.json
apps/sync-server/src/: start-server.ts  sync-server.test.ts  sync-server.ts  sync-store.ts
crates/sandpaper-core/: Cargo.toml
crates/sandpaper-core/src/: app.rs  assets.rs  blocks.rs  db.rs  editor.rs  lib.rs  links.rs  plugins.rs  vaults.rs
docs/: BUG_REPORT.md  BUILD_PLAN.md  RELEASE_NOTES.md  app-improvements-checklist.md  editor-improvements-plan.md  gpui-port.md
docs/sample-plugins/hn-top/: hn-top.js  plugin.json  readme.md
(+113 files in other folders)
