[package]
name = "sandpaper-gpui-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", default-features = false, features = ["font-kit", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
sandpaper-core = { path = "../../crates/sandpaper-core" }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1", features = ["v4"] }

[patch.crates-io]
core-text = { path = "../../crates/core-text" }
