[package]
name = "sandpaper-gpui-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", default-features = false, features = ["font-kit", "runtime_shaders", "test-support"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
sandpaper-core = { path = "../../crates/sandpaper-core" }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
rust-embed = "8.7.2"
unicode-segmentation = "1.12.0"
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "0.6"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
core-text = { path = "../../crates/core-text" }
