[package]
name = "sandpaper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
directories = "5"
hex = "0.4"
rquickjs = { version = "0.9", features = ["loader"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

